--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
  <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/age-calculator-app-main/sw.js')
+      navigator.serviceWorker.register('/sw.js')
         .then((registration) => {
           console.log('Service Worker registered with scope:', registration.scope);
         })
